# GenAi-Desktop-Assitant

./: .gitignore  README.md
back-end/: README.md  pyproject.toml
back-end/app/: main.py
back-end/app/routes/: speech.py
back-end/app/services/: llm_service.py
back-end/tests/: test_llm_service.py  test_speech.py
front-end/: README.md  package-lock.json  package.json
front-end/src/app/: page.tsx
front-end/src/components/: speech-to-text.tsx
front-end/types/: speech-recognition.d.ts
